[package]
name = "cpufreq"
version = "0.1.2"
authors = ["Renat Galimov <renat2017@gmail.com>"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

description = "Rust interface to the linux cpufreq library"
documentation = "https://femdom.github.io/cpufreq/cpupower/"
repository = "https://github.com/femdom/cpufreq"
keywords = ["ffi", "bindings", "linux", "cpufreq", "cpupower"]
license = "MIT"

[dependencies]
libc = "*"

[dependencies.errno]
version = "0.1.4"
