[package]
name = "cpufreq"
version = "0.1.2"
authors = ["Renat Galimov <renat2017@gmail.com>"]
include = [
    "**/*.rs",
    "Cargo.toml",
]
build = "build.rs"
description = "Rust interface to the linux cpufreq library"
documentation = "https://femdom.github.io/cpufreq/cpupower/"
repository = "https://github.com/femdom/cpufreq"
keywords = ["ffi", "bindings", "linux", "cpufreq", "cpupower"]
license = "MIT"
libs = "cpupower"


[dependencies]
libc = "*"

[dependencies.errno]
version = "0.1.4"

[build-dependencies]
gcc = "*"
